# silent-payments

./: .gitignore  .vercelignore  README.md  create_keypair.py  dleq.py  ecdh.py  hardened_keys.py  index.html  package-lock.json  package.json  receiver.py  reference.py  schnorr_lib.py  segwit_addr.py  send_and_receive_test_vectors.json  sender.py  test.ipynb  test.py  test_legend.json  test_vectors.json  utils.py  vercel.json  vite.config.js
api/: index.py  requirements.txt
api/core/: receive.py  send.py
api/core/test/: test.ipynb  test.py
api/core/utils/: utils.py  vanity.py  vanity_python.py
api/src/: receive.py  send.py
api/src/test/: test.py  test_send.ipynb
api/src/utils/: utils.py  vanity.py
api/vanity/: Cargo.toml
api/vanity/src/: address.rs  ffi.rs  generator.rs  lib.rs  main.rs  matcher.rs  parallel.rs
api/vanity/tests/: integration_tests.rs
src/: App.jsx  Tests.jsx  dleq.py  index.css  main.jsx  receive.py  receiver.py  schnorr_lib.py  segwit_addr.py  send.py  sender.py  test.ipynb  test.py  test_list.json  utils.py
src/scenes/: GenerateAddr.jsx  SpVanity.jsx  Tests.jsx
src/styles/: fonts.css
src/test/: test.ipynb  test.py  test_receive.ipynb  test_send.ipynb
src/utils/: hardened_keys.py  schnorr_lib.py  segwit_addr.py  utils.py  vanity.py
vanity/: Cargo.toml
vanity/benches/: vanity_bench.rs
vanity/src/: address.rs  engine.rs  ffi.rs  generator.rs  main.rs  matcher.rs  parallel.rs
