[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

[lib]
name = "vanity"
crate-type = ["cdylib", "rlib"]

[[bench]]
name    = "vanity_bench"
harness = false

[[bin]]
name = "vanity"
path = "src/main.rs"

[dependencies]
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
rand = "0.8"
rayon = "=1.9.0"
bech32 = "0.11"
libc = "0.2"
hex  = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
 
[profile.bench]
opt-level = 3
lto       = "thin"
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1